Fixed tag text layout bug

--- a/nomnom/static/style.css
+++ b/nomnom/static/style.css
@@ -146,6 +146,10 @@ button.poll-flag {
     padding: 0;
 }
 
+/* Tag Text */
+#tag {
+    line-height: 2.5rem;
+}
 
 /* Tag Icon Colours */
 
